# kalendar-fiksed-spacing

./: CMakeLists.txt  README.md
.github/workflows/: build-windows.yml
data/: orthodox_calendar_sr.csv
src/: main.cpp
